<resources>
    <string name="app_name">LongMan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>

    <string name="amePronLink">https://d27ucmmhxk51xv.cloudfront.net/media/english/ameProns/</string>
    <string name="exaPronLink">https://d27ucmmhxk51xv.cloudfront.net/media/english/exaProns/</string>
    <string name="LongManV">1.1.82</string>

    <string name="hide">Hide</string>
    <string name="text_reading">Text Reading</string>
    <string name="new_file">New File</string>
    <string name="review">Review</string>
    <string name="start">Start</string>

    <string name="OK">OK</string>
    <string name="CANCEL">Cancel</string>
    <string name="auto_pronounce">Auto pronounce</string>
    <string name="slideshow">Slideshow</string>
    <string name="set_delay">Set delay</string>
    <string name="refresh_cards">Refresh cards</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="mark">Mark</string>
    <string name="favorite_vocabs">Favorite Vocabs</string>
    <string name="clear_all">Clear all</string>
    <string name="search_history">Search History</string>
    <string name="dictation_trainer">Dictation trainer</string>
    <string name="import_vocab">Import Vocab</string>
    <string name="flash_cards">Flash Cards</string>
    <string name="reverse_items">Reverse Items</string>
    <string name="_1_1">1/1</string>
    <string name="add_to_memorize_box">Add to memorize box</string>
    <string name="memorize_box">Memorize Box</string>
</resources>
